--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Joao Pedro",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/potatosenior/Me/issues"
+    "url": "https://github.com/potatosenior/Me"
   },
-  "homepage": "https://github.com/potatosenior/Me#readme"
+  "homepage": "https://github.com/potatosenior/Me/src"
 }
